# fbthrift

thrift/: configure.ac
thrift/compiler/generate/: t_rb_generator.cc
thrift/compiler/py/: Makefile.am
thrift/compiler/py/generate/: t_cpp_generator.py
thrift/lib/cpp/concurrency/: FunctionRunner.h  Mutex-impl.h  NumaThreadManager.cpp  PosixThreadFactory.cpp
thrift/lib/cpp/transport/: THeader.cpp
thrift/lib/cpp2/: Makefile.am
thrift/lib/cpp2/test/: Makefile.am  ThriftServerTest.cpp
